status alert header msg fix, minor spacing and font-type changes

--- a/site/app/stylesheets/_type.scss
+++ b/site/app/stylesheets/_type.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, .headline, .nav, .section-top {
+h1, h2, h3, h4, h5, .headline, .nav, .section-top, .btn-navbar {
   font-family: $headerFontFamily;
   font-weight: normal;
 }
